--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -4,7 +4,7 @@
 
 
 <meta charset="utf-8">
-<script src="jquery-3.3.1.js"></script>
+<script src="jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="numeric-1.2.6.min.js"></script>
   
 </head>
