--- a/Offside test img.html
+++ b/Offside test img.html
@@ -18,7 +18,7 @@
 <section class="container">
 <img id="imge"></img>
 <canvas class="canvas" id="canvas"></canvas>
-</div>
+</section>
 
 <script>
 var cntn = document.getElementsByClassName('container')[0];
