--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -219,7 +219,25 @@ function actStart() {
             }
 
         }
+			function switcher(){
 
+					switch (scr) {
+						case 0:
+						case 1:
+							both(p);
+							break;
+						case 2:
+						case 3:
+							lit(p);
+							break;
+						case 4:
+						case 5:
+							li(p);
+							break;
+
+					}
+
+		}
     canvas.addEventListener("mousedown", function(event) {
 
         canvas.width = vid.clientWidth;
