--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -9,17 +9,20 @@
 
 <body>
 <main style="display: -webkit-inline-box;">
-<section style="display: table-caption;">
-<input id="tstImg" type="file" accept="image/*"/>
+<section style="display: table-caption;width: 61ch;">
+<input type="text" style="width: 70ch;margin-right: 0.2ch;background-color: buttonface;" id="txtBx">
+<button id="ldr">Load Video</button>
 <button id="dflip" type="button" >Flip plane</button>
 <button  id="gmi" type="button" >Plane height-</button>
 <button id="gpl" type="button" >Plane height+</button>
+<button id="cvsTog" type="button">Create/Delete canvas</button>
 <input id="lkl" type="checkbox" >Auto-straighten plane</input>
 </section>
 
 <section class="container">
-<img id="imge"></img>
-<canvas class="canvas" id="canvas"></canvas>
+<video id="vd1" width="100%" controls autoplay>
+    <source id="VdoSrc" src=""></source>
+</video>
 </section>
 </main>
 
@@ -31,6 +34,40 @@ var p = {
     y: 0
 };
 var lkln = document.getElementById('lkl');
+var vid = document.getElementById('lkl');
+var lodr = document.getElementById('ldr');
+lodr.onclick=function(){
+changeValue();	
+}
+var vid = document.getElementById("vd1");     
+		lkln.oninput = function() {
+			if (!lkln.checked) {
+				cntn.style.cssText = '';
+			} else if (scr>1) {
+				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+			}
+			switcher();
+		}
+function changeValue()
+{
+    var txtVal = document.getElementById('txtBx').value;
+    alert(txtVal);  
+    var vid = document.getElementById('VdoSrc');
+    vid.src = txtVal;  
+    var myVdo = document.getElementById("vd1");     
+    myVdo.load(); 
+	actStart();
+}
+  function actStart() {
+	var lkln = document.getElementById('lkl');
+	    var scr = 0;
+
+        var canvas = document.createElement('canvas');
+        canvas.id = "canvas";
+        canvas.className = "canvas";
+		var cntn = document.getElementsByClassName('container')[0];
+        cntn.appendChild(canvas);
+		var lkln = document.getElementById('lkl');
 
 		lkln.oninput = function() {
 			if (!lkln.checked) {
@@ -40,159 +77,187 @@ var lkln = document.getElementById('lkl');
 			}
 			switcher();
 		}
-var v_tstImg = document.getElementById('tstImg');
-v_tstImg.addEventListener('change', handleFile, false);
-var ctx_tmp = document.getElementById('canvas').getContext('2d');
-
-function handleFile(e) {
-    var mp_ct = 0;
-    var mp_ct_s = 0;
-    var url = URL.createObjectURL(e.target.files[0]);
-    var imge = document.getElementById('imge');
-
-    imge.addEventListener('load', function() {
-        ctx_tmp.canvas.width = imge.width;
-        ctx_tmp.canvas.height = imge.height;
-        ctx_tmp.drawImage(imge, 0, 0, imge.width, imge.height);
-
-        var frame_data0 =
-            ctx_tmp.getImageData(0, 0, ctx_tmp.canvas.width, ctx_tmp.canvas.height);
-        actStart();
-    }, false);
-    imge.src = url;
-
-}
-
-function actStart() {
-
-	var scr = 0;
-
-    document.getElementById('dflip').onclick = function() {
-        dflip();
-    }
-    document.getElementById('gmi').onclick = function() {
-        gmi();
-    }
-    document.getElementById('gpl').onclick = function() {
-        gpl();
-    }
-	
-			function switcher(){
-
-					switch (scr) {
-						case 0:
-						case 1:
-							both(p);
-							break;
-						case 2:
-						case 3:
-							lit(p);
-							break;
-						case 4:
-						case 5:
-							li(p);
-							break;
-
-					}
-
-		}
-
-    var vid = document.getElementById('imge');
-    var d = 1;
-    console.log(vid);
-
-    var theta = 5 * (Math.PI / 180);
-    var thetav = 0.05 * (Math.PI / 180);
-
-    function gmi() {
-
-        theta -= 0.1 * (Math.PI / 180);
-        thetav -= 0.01 * (Math.PI / 180);
-        if (theta <
-            0) {
-            theta = 0;
+        document.getElementById('dflip').onclick = function() {
+            dflip();
         }
-	switcher();
-    }
+        document.getElementById('gmi').onclick = function() {
+            gmi();
+        }
+        document.getElementById('gpl').onclick = function() {
+            gpl();
+        }
+        document.getElementById('cvsTog').onclick = function() {
+            cvsTog();
+        }
 
-    function gpl() {
+        var vid = $("video#vd1")[0];
+        var swtch = vid.playbackRate;
+        var bckw;
+        var multiKy = 0;
 
-        theta += 0.1 * (Math.PI / 180);
-        thetav += 0.01 * (Math.PI / 180);
+        document.onkeydown = function(e) {
 
-	switcher();
-    }
+            if (e.code == "KeyD") {
 
-    function dflip() {
+                vid.playbackRate = 0.07;
+                if (vid.paused) {
+                    vid.play();
+                }
 
-        d *= -1;
+            }
 
-		switcher();
-    }
+            if (e.code == "KeyS") {
+                multiKy++;
+                vid.playbackRate = swtch;
 
-    var xs = [0];
-    var ys = [0];
-    var tdxs = [0];
-    var tdys = [0];
-    var canvas = document.getElementById("canvas");
-    canvas.width = vid.clientWidth;
-    canvas.height = vid.clientHeight;
+                if (!vid.paused) {
+                    vid.pause();
+                }
+                slwBk();
 
-    var ctx = canvas.getContext('2d');
+                if (multiKy < 2) {
+                    bckw = setTimeout(slwBk, 100);
+                } else {
+                    clearTimeout(bckw);
+                    bckw = setTimeout(slwBk, 100);
+                }
 
-    var canvas1 = document.createElement('canvas');
+                function slwBk() {
+                    vid.currentTime -= 0.007;
+                    console.log('backwards');
+                }
 
-    var ctx1 = canvas1.getContext('2d');
+            }
 
-    var canvas2 = document.createElement('canvas');
+        }
 
-    var ctx2 = canvas2.getContext('2d');
+        document.onkeyup = function(e) {
 
-    var points = [
-        [vid.clientWidth * 0.2, vid.clientHeight * 0.8],
-        [vid.clientWidth * 0.8, vid.clientHeight * 0.8],
-        [vid.clientWidth * 0.8, vid.clientHeight * 0.2],
-        [vid.clientWidth * 0.2, vid.clientHeight * 0.2],
-        [vid.clientWidth * 0.4, vid.clientHeight * 0.2],
-        [vid.clientWidth * 0.5, vid.clientHeight * 0.6]
-    ];
+            if (e.code == "KeyD") {
 
-    prepare_lines(ctx2, points);
-    draw_canvas(ctx, ctx1, ctx2);
+                vid.playbackRate = swtch;
+                if (!vid.paused) {
+                    vid.pause();
+                }
 
-    var drag = null;
+            }
 
-    var prx = 15;
+            if (e.code == "KeyS") {
 
-    function toBorder(point1, point2, left, top, right, bottom) {
+                clearTimeout(bckw);
+				multiKy=0;
+                vid.playbackRate = swtch;
 
-        var x1 = point1.x;
-        var x2 = point2.x;
-        var y1 = point1.y;
-        var y2 = point2.y;
-        var dx, dy, py, vx, vy;
-        vx = x2 - x1;
-        vy = y2 - y1;
-        dx = vx < 0 ? left : right;
-        dy = py = vy < 0 ? top : bottom;
-        if (vx === 0) {
-            dx = x1;
-        } else if (vy === 0) {
-            dy = y1;
-        } else {
-            var dy = y1 + (vy / vx) * (dx - x1);
-            if (dy < top || dy > bottom) {
-                dx = x1 + (vx / vy) * (py - y1);
-                dy = py;
+            }
+
+        }
+
+        var d = 1;
+        //console.log(vid);
+
+        var theta = 5 * (Math.PI / 180);
+        var thetav = 0.05 * (Math.PI / 180);
+
+        function gmi() {
+
+            theta -= 0.1 * (Math.PI / 180);
+            thetav -= 0.01 * (Math.PI / 180);
+            if (theta < 0) {
+                theta = 0;
+            }
+
+             switcher();
+        }
+
+        function gpl() {
+
+            theta += 0.1 * (Math.PI / 180);
+            thetav += 0.01 * (Math.PI / 180);
+
+             switcher();
+        }
+
+        function cvsTog() {
+            let tmp_cvs = document.getElementsByTagName('CANVAS');
+
+            if (tmp_cvs.length > 0) {
+                for (i = 0; i < tmp_cvs.length; i++) {
+                    tmp_cvs[i].remove();
+                }
+            } else {
+                actStart();
             }
         }
-        return {
-            x: dx,
-            y: dy
-        }
-    }
-    Source: https: //stackoverflow.com/a/45056039 - Blindman67
 
+        function dflip() {
+
+            d *= -1;
+
+            switcher();
+        }
+
+        var xs = [0];
+        var ys = [0];
+        var tdxs = [0];
+        var tdys = [0];
+        var canvas = document.getElementById("canvas");
+        canvas.width = vid.clientWidth;
+        canvas.height = vid.clientHeight;
+
+        var ctx = canvas.getContext('2d');
+
+        var canvas1 = document.createElement('canvas');
+
+        var ctx1 = canvas1.getContext('2d');
+
+        var canvas2 = document.createElement('canvas');
+
+        var ctx2 = canvas2.getContext('2d');
+
+        var points = [
+            [vid.clientWidth * 0.2, vid.clientHeight * 0.8],
+            [vid.clientWidth * 0.8, vid.clientHeight * 0.8],
+            [vid.clientWidth * 0.8, vid.clientHeight * 0.2],
+            [vid.clientWidth * 0.2, vid.clientHeight * 0.2],
+            [vid.clientWidth * 0.4, vid.clientHeight * 0.2],
+            [vid.clientWidth * 0.5, vid.clientHeight * 0.6]
+        ];
+
+        prepare_lines(ctx2, points);
+        draw_canvas(ctx, ctx1, ctx2);
+
+        var drag = null;
+
+        var prx = 15;
+
+        function toBorder(point1, point2, left, top, right, bottom) {
+
+            var x1 = point1.x;
+            var x2 = point2.x;
+            var y1 = point1.y;
+            var y2 = point2.y;
+            var dx, dy, py, vx, vy;
+            vx = x2 - x1;
+            vy = y2 - y1;
+            dx = vx < 0 ? left : right;
+            dy = py = vy < 0 ? top : bottom;
+            if (vx === 0) {
+                dx = x1;
+            } else if (vy === 0) {
+                dy = y1;
+            } else {
+                var dy = y1 + (vy / vx) * (dx - x1);
+                if (dy < top || dy > bottom) {
+                    dx = x1 + (vx / vy) * (py - y1);
+                    dy = py;
+                }
+            }
+            return {
+                x: dx,
+                y: dy
+            }
+        }
+        Source: https: //stackoverflow.com/a/45056039 - Blindman67
 
             function both(p) {
                 prepare_lines(ctx2, points);
@@ -219,7 +284,8 @@ function actStart() {
             }
 
         }
-			function switcher(){
+
+				function switcher(){
 
 					switch (scr) {
 						case 0:
@@ -238,104 +304,106 @@ function actStart() {
 					}
 
 		}
-    canvas.addEventListener("mousedown", function(event) {
 
-        canvas.width = vid.clientWidth;
-        canvas.height = vid.clientHeight;
+        canvas.addEventListener("mousedown", function(event) {
 
-        canvas1.width = vid.clientWidth;
-        canvas1.height = vid.clientHeight;
+            canvas.width = vid.clientWidth;
+            canvas.height = vid.clientHeight;
 
-        canvas2.width = vid.clientWidth;
-        canvas2.height = vid.clientHeight;
-        event.preventDefault();
-        p = get_mouse_position(event);
-        for (let i = 0; i <
-            4; i++) {
-            let x = points[i][0];
-            let y = points[i][1];
-            xs[i] = points[i][0];
-            ys[i] = points[i][1];
+            canvas1.width = vid.clientWidth;
+            canvas1.height = vid.clientHeight;
 
-            if (p.x < x + prx && p.x > x - prx && p.y < y + prx && p.y > y - prx) {
-                drag = i;
-            }
-        }
-
-        for (let i = 4; i < 6; i++) {
-            let x = points[i][0];
-            let y = points[i][1];
-            tdxs[i - 4] = points[i][0];
-            tdys[i - 4] = points[i][1];
-
-            if (p.x < x + prx && p.x > x - prx && p.y < y + prx && p.y > y - prx) {
-                drag = i;
-            }
-        }
-
-        switcher();
-
-    }, false);
-    canvas.addEventListener("mousemove", function(event) {
-
-        if (event.which == 1) {
-
-            p = get_mouse_position(event);
-
-            switcher();
-
-        }
-
-        event.preventDefault();
-        if (drag != null) {
-
-            points[drag][0] = p.x;
-            points[drag][1] = p.y;
-
-            prepare_lines(ctx2, points);
-            draw_canvas(ctx, ctx1, ctx2);
-
-        }
-
-    }, false);
-
-
-    canvas.addEventListener("wheel", function(event) {
-
-        if (event.altKey) {
+            canvas2.width = vid.clientWidth;
+            canvas2.height = vid.clientHeight;
             event.preventDefault();
-            if (event.deltaY / Math.abs(event.deltaY) < 0) {
-                gpl();
-            } else {
-                gmi();
-            }
-        } else if (!event.ctrlKey) {
             p = get_mouse_position(event);
+            for (let i = 0; i <
+                4; i++) {
+                let x = points[i][0];
+                let y = points[i][1];
+                xs[i] = points[i][0];
+                ys[i] = points[i][1];
 
-            scr = (scr + (event.deltaY / event.deltaY)) % 6;
+                if (p.x < x + prx && p.x > x - prx && p.y < y + prx && p.y > y - prx) {
+                    drag = i;
+                }
+            }
+
+            for (let i = 4; i < 6; i++) {
+                let x = points[i][0];
+                let y = points[i][1];
+                tdxs[i - 4] = points[i][0];
+                tdys[i - 4] = points[i][1];
+
+                if (p.x < x + prx && p.x > x - prx && p.y < y + prx && p.y > y - prx) {
+                    drag = i;
+                }
+            }
 
             switcher();
 
-        }
-    }, );
+        }, false);
+        canvas.addEventListener("mousemove", function(event) {
 
-    canvas.addEventListener("mouseup", function(event) {
-        event.preventDefault();
-        prepare_lines(ctx2, points);
-        ctx.drawImage(ctx1.canvas, 0, 0);
-        ctx.drawImage(ctx2.canvas, 0, 0);
-        drag = null;
+            if (event.which == 1) {
 
-    }, false);
-    canvas.addEventListener("mouseout", function(event) {
-        event.preventDefault();
-        drag = null;
-    }, false);
-    canvas.addEventListener("mouseenter", function(event) {
-        event.preventDefault();
-        drag = null;
-    }, false);
+                p = get_mouse_position(event);
 
+                switcher();
+
+            }
+
+            event.preventDefault();
+            if (drag != null) {
+
+                points[drag][0] = p.x;
+                points[drag][1] = p.y;
+
+                prepare_lines(ctx2, points);
+                draw_canvas(ctx, ctx1, ctx2);
+
+            }
+
+        }, false);
+
+
+
+        canvas.addEventListener("wheel", function(event) {
+
+            if (event.altKey) {
+                event.preventDefault();
+                if (event.deltaY / Math.abs(event.deltaY) <
+                    0) {
+                    gpl();
+                } else {
+                    gmi();
+                }
+            } else if (!event.ctrlKey) {
+                p = get_mouse_position(event);
+
+                scr = (scr + (event.deltaY / event.deltaY)) % 6;
+
+                switcher();
+
+            }
+        }, );
+
+        canvas.addEventListener("mouseup", function(event) {
+            event.preventDefault();
+            prepare_lines(ctx2, points);
+            ctx.drawImage(ctx1.canvas, 0, 0);
+            ctx.drawImage(ctx2.canvas, 0, 0);
+            drag = null;
+
+        }, false);
+        canvas.addEventListener("mouseout", function(event) {
+            event.preventDefault();
+            drag = null;
+        }, false);
+        canvas.addEventListener("mouseenter", function(event) {
+            event.preventDefault();
+            drag = null;
+        }, false);
 
         function prepare_lines(ctx, p) {
             ctx.save();
@@ -361,11 +429,11 @@ function actStart() {
             ctx.restore();
         }
 
-    function draw_canvas(ctx, ctx1, ctx2) {
-        ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
-        ctx.drawImage(ctx1.canvas, 0, 0);
-        ctx.drawImage(ctx2.canvas, 0, 0);
-    }
+        function draw_canvas(ctx, ctx1, ctx2) {
+            ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
+            ctx.drawImage(ctx1.canvas, 0, 0);
+            ctx.drawImage(ctx2.canvas, 0, 0);
+        }
 
         function get_mouse_position(event) {
 
@@ -390,9 +458,7 @@ function actStart() {
             }
         }
 
-    var mvrt = 0;
-
-            var mvrt = 0;	
+        var mvrt = 0;	
 
         function setup(x, y, d) {
             var n = 1;
