--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -10,7 +10,7 @@
 <body>
 <main style="display: -webkit-inline-box;">
 <section style="display: table-caption;width: 61ch;">
-<input type="text" style="width: 70ch;margin-right: 0.2ch;background-color: buttonface;" id="txtBx">
+<input type="text" style="width: 78ch;margin-right: 0.2ch;background-color: buttonface;" id="txtBx">
 <button id="ldr">Load Video</button>
 <button id="dflip" type="button" >Flip plane</button>
 <button  id="gmi" type="button" >Plane height-</button>
@@ -662,7 +662,7 @@ function changeValue()
 </script>
 <style>
 .container {
-margin: 0 auto;
+margin: 2.9em auto;
 position: relative;
 }
 
@@ -680,7 +680,9 @@ top: 0;
 left: 0;
 background-color:rgba(0,255,0,0);
 }
-
+button{
+background-color:buttonface;
+}
 </style>
 </body>
 </html>
