--- a/Offside test img.html
+++ b/Offside test img.html
@@ -595,7 +595,12 @@ top: 0;
 left: 0;
 background-color:rgba(0,255,0,0);
 }
-
+button{
+background-color:buttonface;
+}
+input[type="file" i]::-webkit-file-upload-button{
+	background-color: buttonface;
+}
 </style>
 </body>
 </html>
