--- a/Offside test.html
+++ b/Offside test.html
@@ -653,7 +653,7 @@
 
     <style>
     .container {
-        margin: 0 auto;
+        margin: 1.4em auto;
         position: relative;
     }
 
@@ -671,6 +671,12 @@
         left: 0;
         background-color: rgba(0, 255, 0, 0);
     }
+	button{
+	background-color:buttonface;
+	}
+	input[type="file" i]::-webkit-file-upload-button{
+		background-color: buttonface;
+	}
     </style>
 
 </body>
