--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -15,7 +15,7 @@
 <button id="dflip" type="button" >Flip plane</button>
 <button  id="gmi" type="button" >Plane height-</button>
 <button id="gpl" type="button" >Plane height+</button>
-<button id="cvsTog" type="button">Create/Delete canvas</button>
+<button id="cvsTog" type="button">Create/Delete canvas</button><br>
 <input id="lkl" type="checkbox" >Auto-straighten plane</input>
 </section>
 
