--- a/Offside test img.html
+++ b/Offside test img.html
@@ -13,7 +13,7 @@
 <input id="tstImg" type="file" accept="image/*"/>
 <button id="dflip" type="button" >Flip plane</button>
 <button  id="gmi" type="button" >Plane height-</button>
-<button id="gpl" type="button" style="margin-right: 54%;">Plane height+</button>
+<button id="gpl" type="button" style="margin-right: 54%;">Plane height+</button><br>
 <input id="lkl" type="checkbox" >Auto-straighten plane</input>
 </section>
 
