--- a/Offside test img.html
+++ b/Offside test img.html
@@ -81,15 +81,17 @@ function actStart() {
     var d = 1;
     console.log(vid);
 
-    var theta = 5 * (Math.PI / 180);
-    var thetav = 0.05 * (Math.PI / 180);
+    var theta = 0;
+    var thetav = 0;
 
     function gmi() {
 
-        theta -= 0.1 * (Math.PI / 180);
-        thetav -= 0.01 * (Math.PI / 180);
-        if (theta <
-            0) {
+        theta -= 0.007 * (Math.PI / 180);
+        thetav -= 0.0065 * (Math.PI / 180);
+        if (thetav < 0) {
+            thetav = 0;
+        } 
+		if (theta < 0) {
             theta = 0;
         }
 	switcher();
@@ -97,9 +99,13 @@ function actStart() {
 
     function gpl() {
 
-        theta += 0.1 * (Math.PI / 180);
-        thetav += 0.01 * (Math.PI / 180);
-
+        theta += 0.007 * (Math.PI / 180);
+        thetav += 0.0065 * (Math.PI / 180);
+		
+		if (theta < 0) {
+            theta = 0;
+        }
+		
 	switcher();
     }
 
