--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -3,8 +3,8 @@
 
 <head>
 <meta charset="utf-8">
-<script src="jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="numeric-1.2.6.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="numeric-1.2.6_stripped.js"></script>
 </head>
 
 <body>
@@ -40,14 +40,7 @@ lodr.onclick=function(){
 changeValue();	
 }
 var vid = document.getElementById("vd1");     
-		lkln.oninput = function() {
-			if (!lkln.checked) {
-				cntn.style.cssText = '';
-			} else if (scr>1) {
-				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
-			}
-			switcher();
-		}
+
 function changeValue()
 {
     var txtVal = document.getElementById('txtBx').value;
@@ -221,14 +214,16 @@ function changeValue()
 
         var ctx2 = canvas2.getContext('2d');
 
-        var points = [
-            [vid.clientWidth * 0.2, vid.clientHeight * 0.8],
-            [vid.clientWidth * 0.8, vid.clientHeight * 0.8],
-            [vid.clientWidth * 0.8, vid.clientHeight * 0.2],
-            [vid.clientWidth * 0.2, vid.clientHeight * 0.2],
-            [vid.clientWidth * 0.4, vid.clientHeight * 0.2],
-            [vid.clientWidth * 0.5, vid.clientHeight * 0.6]
-        ];
+	var lf=vid.offsetLeft+vid.clientLeft;
+	var tp=vid.offsetTop+vid.clientTop;
+    var points = [
+        [lf+vid.clientWidth * 0.2, tp+vid.clientHeight * 0.8],
+        [lf+vid.clientWidth * 0.8, tp+vid.clientHeight * 0.8],
+        [lf+vid.clientWidth * 0.8, tp+vid.clientHeight * 0.2],
+        [lf+vid.clientWidth * 0.2, tp+vid.clientHeight * 0.2],
+        [lf+vid.clientWidth * 0.4, tp+vid.clientHeight * 0.2],
+        [lf+vid.clientWidth * 0.5, tp+vid.clientHeight * 0.6]
+    ];
 
         prepare_lines(ctx2, points);
         draw_canvas(ctx, ctx1, ctx2);
@@ -264,7 +259,7 @@ function changeValue()
                 y: dy
             }
         }
-        Source: https: //stackoverflow.com/a/45056039 - Blindman67
+      /* Source: https://stackoverflow.com/a/45056039 - Blindman67*/
 
             function both(p) {
                 prepare_lines(ctx2, points);
@@ -310,6 +305,14 @@ function changeValue()
 
 					}
 
+		}
+				lkln.oninput = function() {
+			if (!lkln.checked) {
+				cntn.style.cssText = '';
+			} else if (scr>1) {
+				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+			}
+			switcher();
 		}
 
         canvas.addEventListener("mousedown", function(event) {
@@ -547,13 +550,10 @@ function changeValue()
 			angl = Math.atan2(y-yq1,xq1-x)-0.5*Math.PI;
 			}else{
 			ctx.moveTo(x, 0);
-			ctx.lineTo(x,canvas.clientHeight);
+			ctx.lineTo(x,canvas.clientHeight+canvas.offsetTop+canvas.clientTop);
 			ctx.stroke();
 			angl =0;
 			}
-
-        
-
         }
 
         function setupt(x, y, d) {
@@ -584,13 +584,7 @@ function changeValue()
                 y: 0
             };
 			let infn=((xst[3] == xst[1]) && (xst[2] == xst[0]))?true:false; 
-            if ((xst[3] == xst[1]) && (xst[2] != xst[0])) {
-                xyq1.x = xst[1];
-                xyq1.y = yst[0] + ((xst[1] - xst[0]) / (xst[0] - xst[2])) * (yst[0] - yst[2]);
-            } else if ((xst[3] != xst[1]) && (xst[2] == xst[0])) {
-                xyq1.x = xst[0];
-                xyq1.y = yst[1] + ((xst[0] - xst[1]) / (xst[1] - xst[3])) * (yst[1] - yst[3]);
-            } else if (!infn)
+ if (!infn)
 			{
 			var m1 = (yst[3] - yst[0]) / (xst[3] - xst[0]);
 			var m2 = (yst[2] - yst[1]) / (xst[2] - xst[1]);
@@ -659,7 +653,7 @@ function changeValue()
 			angl =Math.atan2(y-tdy,tdx-x)-0.5*Math.PI;
 			}else{
 			ctx.moveTo(0, y);
-			ctx.lineTo(canvas.clientWidth, y);
+			ctx.lineTo(canvas.clientWidth+canvas.offsetLeft+canvas.clientLeft, y);
 			ctx.stroke();
 			angl=0;
 			}
