--- a/Offside test.html
+++ b/Offside test.html
@@ -4,8 +4,8 @@
 <head>
 
     <meta charset="utf-8">
-    <script src="jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="numeric-1.2.6.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="numeric-1.2.6_stripped.js"></script>
 
 </head>
 
@@ -59,14 +59,6 @@
         cntn.appendChild(canvas);
 		var lkln = document.getElementById('lkl');
 
-		lkln.oninput = function() {
-			if (!lkln.checked) {
-				cntn.style.cssText = '';
-			} else if (scr>1) {
-				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
-			}
-			switcher();
-		}
         document.getElementById('dflip').onclick = function() {
             dflip();
         }
@@ -210,14 +202,16 @@
 
         var ctx2 = canvas2.getContext('2d');
 
-        var points = [
-            [vid.clientWidth * 0.2, vid.clientHeight * 0.8],
-            [vid.clientWidth * 0.8, vid.clientHeight * 0.8],
-            [vid.clientWidth * 0.8, vid.clientHeight * 0.2],
-            [vid.clientWidth * 0.2, vid.clientHeight * 0.2],
-            [vid.clientWidth * 0.4, vid.clientHeight * 0.2],
-            [vid.clientWidth * 0.5, vid.clientHeight * 0.6]
-        ];
+	var lf=vid.offsetLeft+vid.clientLeft;
+	var tp=vid.offsetTop+vid.clientTop;
+    var points = [
+        [lf+vid.clientWidth * 0.2, tp+vid.clientHeight * 0.8],
+        [lf+vid.clientWidth * 0.8, tp+vid.clientHeight * 0.8],
+        [lf+vid.clientWidth * 0.8, tp+vid.clientHeight * 0.2],
+        [lf+vid.clientWidth * 0.2, tp+vid.clientHeight * 0.2],
+        [lf+vid.clientWidth * 0.4, tp+vid.clientHeight * 0.2],
+        [lf+vid.clientWidth * 0.5, tp+vid.clientHeight * 0.6]
+    ];
 
         prepare_lines(ctx2, points);
         draw_canvas(ctx, ctx1, ctx2);
@@ -253,7 +247,7 @@
                 y: dy
             }
         }
-        Source: https: //stackoverflow.com/a/45056039 - Blindman67
+       /* Source: https://stackoverflow.com/a/45056039 - Blindman67*/
 
             function both(p) {
                 prepare_lines(ctx2, points);
@@ -299,6 +293,15 @@
 
 					}
 
+		}
+		
+				lkln.oninput = function() {
+			if (!lkln.checked) {
+				cntn.style.cssText = '';
+			} else if (scr>1) {
+				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+			}
+			switcher();
 		}
 
         canvas.addEventListener("mousedown", function(event) {
@@ -536,13 +539,10 @@
 			angl = Math.atan2(y-yq1,xq1-x)-0.5*Math.PI;
 			}else{
 			ctx.moveTo(x, 0);
-			ctx.lineTo(x,canvas.clientHeight);
+			ctx.lineTo(x,canvas.clientHeight+canvas.offsetTop+canvas.clientTop);
 			ctx.stroke();
 			angl =0;
 			}
-
-        
-
         }
 
         function setupt(x, y, d) {
@@ -573,13 +573,7 @@
                 y: 0
             };
 			let infn=((xst[3] == xst[1]) && (xst[2] == xst[0]))?true:false; 
-            if ((xst[3] == xst[1]) && (xst[2] != xst[0])) {
-                xyq1.x = xst[1];
-                xyq1.y = yst[0] + ((xst[1] - xst[0]) / (xst[0] - xst[2])) * (yst[0] - yst[2]);
-            } else if ((xst[3] != xst[1]) && (xst[2] == xst[0])) {
-                xyq1.x = xst[0];
-                xyq1.y = yst[1] + ((xst[0] - xst[1]) / (xst[1] - xst[3])) * (yst[1] - yst[3]);
-            } else if (!infn)
+ if (!infn)
 			{
 			var m1 = (yst[3] - yst[0]) / (xst[3] - xst[0]);
 			var m2 = (yst[2] - yst[1]) / (xst[2] - xst[1]);
@@ -648,7 +642,7 @@
 			angl =Math.atan2(y-tdy,tdx-x)-0.5*Math.PI;
 			}else{
 			ctx.moveTo(0, y);
-			ctx.lineTo(canvas.clientWidth, y);
+			ctx.lineTo(canvas.clientWidth+canvas.offsetLeft+canvas.clientLeft, y);
 			ctx.stroke();
 			angl=0;
 			}
